# KOTH-snake

./: CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/src/: main.cpp
backend/src/game/: board.hpp  direction.hpp  game_loop.hpp  player.hpp
backend/src/helpers/: AsyncFileReader.h  convertion.hpp
benchmark/: main.cpp
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  app_snap.js  board.js  player.js
server/: CMakeLists.txt
tests/: unit-board.cpp  unit-states.cpp
